--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </div>
     <div id="veg-starters" class="veg-subcontent active">
       <div class="card">
-        <img src="https://i.imgur.com/0Yv0Q7G.jpg" alt="Veg Spring Roll">
+        <img src="soya_lollipops.jpg" alt="Veg Spring Roll">
         <div class="card-body">
-          <h3>Soya Lolipop</h3>
+          <h3>Soya Lollipop</h3>
           <select class="size-select">
             <option value="180">Half</option>
             <option value="320">Full</option>
